[project]
name = "tah"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.pdm.scripts]
test = "pytest"
ctest = "pytest --cov"
stest = "pytest -s"
giti = "pip install git+https://github.com/DONGUK777/tah.git@0.2.0/args"

[project.scripts]
my-history = "tah.cli:cmd"

[projects.urls]
Homepage="https://github.com/DONGUK777/tah.git"
Issues="https://github.com/DONGUK777/tah/issues"

